tests/parsing/smtlib/v2.7/errors/146_function_dec_arg_list_unclosed_1.smt2
(set-logic ALL)
(define-funs-rec ((foo (_))))
